@@ -21,18 +21,31 @@ application {
     mainClass = 'astra.Main'
     applicationDefaultJvmArgs = [
         '--module-path', '../lib',
-        '--add-modules', 'javafx.graphics'
+        '--add-modules', 'javafx.controls,javafx.fxml,javafx.graphics',
+        '--add-exports', 'javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED',
+        '--add-exports', 'javafx.graphics/com.sun.javafx.scene.control=ALL-UNNAMED',
+        '--add-opens', 'javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+        '--add-opens', 'javafx.base/com.sun.javafx.logging=ALL-UNNAMED'
     ]
 }
+
+/*application {
+	mainClass = 'jeu.Jeu'
+}*/
 
 startScripts {
     doLast {
         windowsScript.text = windowsScript.text.replace(
             'set DEFAULT_JVM_OPTS=',
-            'set DEFAULT_JVM_OPTS="--module-path" "..\\lib" "--add-modules" "javafx.graphics" '
+            'set DEFAULT_JVM_OPTS="--module-path" "..\\lib" "--add-modules" "javafx.controls,javafx.fxml,javafx.graphics" "--add-exports" "javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED" "--add-exports" "javafx.graphics/com.sun.javafx.scene.control=ALL-UNNAMED" "--add-opens" "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED" "--add-opens" "javafx.base/com.sun.javafx.logging=ALL-UNNAMED" '
+        )
+        unixScript.text = unixScript.text.replace(
+            'DEFAULT_JVM_OPTS=""',
+            'DEFAULT_JVM_OPTS="--module-path ../lib --add-modules javafx.controls,javafx.fxml,javafx.graphics --add-exports javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.scene.control=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED --add-opens javafx.base/com.sun.javafx.logging=ALL-UNNAMED"'
         )
     }
 }
+
 
 repositories {
     mavenCentral()
@@ -56,6 +69,11 @@ test {
         events 'passed', 'failed', 'skipped'
     }
 }
+
+tasks.run.configure {
+    standardInput = System.in
+}
+
 
 run {
     jvmArgs = [
